--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -15,8 +15,14 @@
       <a class="navbar-brand" href="#">N-Ecommerce</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/register"
+            >Register</a
+          >
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
