--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,22 +8,22 @@
     <form method="post" action="/register">
         <div class="mb-3">
           <label for="Name" class="form-label">Name <sup text-dark>*</sup></label>
-          <input type="text" class="form-control" id="exampleInputEmail1" name="name">
+          <input type="text" class="form-control" id="exampleInputEmail1" name="name" required>
         </div>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" required>
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control"  name="password" id="exampleInputPassword1">
+          <input type="password" class="form-control"  name="password" id="exampleInputPassword1" required>
         </div>
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
-        <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+        <button type="submit" class="btn btn-primary" >Submit</button>
       </form>
     </div>
 
