--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,16 +13,16 @@
         </div>
       <% } %>
         <div class="mb-3">
-          <label for="Name" class="form-label">Name <sup text-dark>*</sup></label>
+          <label for="Name" class="form-label">Name <sup class="text-danger">*</sup></label>
           <input type="text" class="form-control" id="exampleInputEmail1" name="name" required>
         </div>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <label for="exampleInputEmail1" class="form-label">Email address <sup class="text-danger">*</sup></label>
           <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp" required>
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <label for="exampleInputPassword1" class="form-label">Password <sup class="text-danger">*</sup></label>
           <input type="password" class="form-control"  name="password" id="exampleInputPassword1" required>
         </div>
         <div class="mb-3 form-check">
