--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -22,6 +22,9 @@
             >Register</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/login">Login</a>
+        </li>
 
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
