--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -25,6 +25,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/login">Login</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/logout"
+            >LogOut</a
+          >
+        </li>
 
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
